added few more  actions/transformatins on rdd

--- a/rdd.ipynb
+++ b/rdd.ipynb
@@ -16,11 +16,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/03/19 21:45:01 WARN Utils: Your hostname, vivoBook resolves to a loopback address: 127.0.1.1; using 192.168.1.4 instead (on interface wlan0)\n",
-      "24/03/19 21:45:01 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/03/21 07:26:56 WARN Utils: Your hostname, vivoBook resolves to a loopback address: 127.0.1.1; using 192.168.1.4 instead (on interface wlan0)\n",
+      "24/03/21 07:26:56 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/03/19 21:45:03 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/03/21 07:26:58 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +222,125 @@
     "print(numbers_rdd.is_cached)\n",
     "# see where this rdd is cached, whether in memory or disk?\n",
     "print(numbers_rdd.getStorageLevel())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# coalesce()\n",
+    " - `coalesce` method on an RDD to  only **reduce**  the number of partitions. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of partition 4\n",
+      "no of partition after coalesce 2\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lets create a rdd with 4 partitions\n",
+    "original_rdd = sc.parallelize([1,2,3,4,5,6,7,8],4)\n",
+    "# check the no of partition\n",
+    "print(\"number of partition\",original_rdd.getNumPartitions())\n",
+    "# coalesce the rdd into 2 partitions\n",
+    "coalesce_rdd = original_rdd.coalesce(2)\n",
+    "# check the number of partition after coalesce\n",
+    "print(\"no of partition after coalesce\",coalesce_rdd.getNumPartitions()) \n",
+    "# collect and print rdd\n",
+    "print(coalesce_rdd.collect())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# repartition()\n",
+    "- `repartiton can be used to either increase or decrease the number of partitions in RDD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of partitions before repartition: 4\n",
+      "new no of partitions 6\n",
+      "no of partition 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with 4 partitions\n",
+    "original_rdd = sc.parallelize([1, 2, 3, 4, 5, 6, 7, 8], 4)\n",
+    "# Get the number of partitions in the original RDD\n",
+    "num_partitions_before = original_rdd.getNumPartitions()\n",
+    "print(\"Number of partitions before repartition:\", num_partitions_before)\n",
+    "# lets increase the no of partiton to 6\n",
+    "increased_partition_rdd = original_rdd.repartition(6)\n",
+    "# check the no of partition in new RDD.\n",
+    "print(\"new no of partitions\",increased_partition_rdd.getNumPartitions())\n",
+    "# lets decrease the no of partiton to 2\n",
+    "decreased_no_partitions = original_rdd.repartition(2)\n",
+    "print(\"no of partition\",decreased_no_partitions.getNumPartitions())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Count()\n",
+    "- it is used to count the no of elements in the RDD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 6:====================================================>    (11 + 1) / 12]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total count of elements in the RDD: 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with some elements\n",
+    "rdd = sc.parallelize([1, 2, 3, 4, 5])\n",
+    "\n",
+    "# Count the number of elements in the RDD using count()\n",
+    "element_count = rdd.count()\n",
+    "# Print the total count of elements in the RDD\n",
+    "print(\"Total count of elements in the RDD:\", element_count)\n"
    ]
   },
   {
