added more code

--- a/rdd.ipynb
+++ b/rdd.ipynb
@@ -344,6 +344,642 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# countByKey()\n",
+    "- the countByKey() method is used specifically on an RDD of key-value pairs to count the occurrences of each unique key in the RDD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple': 2, 'banana': 1, 'cherry': 1, 'orange': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD of key-value pairs\n",
+    "rdd = sc.parallelize([( 'apple',1), ( 'banana',1), ( 'cherry',1), ( 'apple',2), ( 'orange',4)])\n",
+    "# Count the occurrences of each key in the RDD using countByKey()\n",
+    "key_counts = rdd.countByKey()\n",
+    "# print the count dict\n",
+    "print(dict(key_counts))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# countByValue()\n",
+    "-  countByValue() method is used to count the occurrences of each unique element in an RDD. This method is typically applied to RDDs containing non-key-value pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {1: 3, 2: 3, 3: 1, 4: 1, 5: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with some elements\n",
+    "rdd = sc.parallelize([1, 2, 3, 2, 1, 4, 5, 2, 1])\n",
+    "\n",
+    "# Count the occurrences of each unique element in the RDD using countByValue()\n",
+    "element_counts = rdd.countByValue()\n",
+    "# Print the element counts\n",
+    "print(element_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# distinct()\n",
+    "- returns a new rdd with distinct elements from original rdd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 2, 1, 4, 5, 2, 1]\n",
+      "Distinct elements in the RDD:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 13:==========================================>              (9 + 3) / 12]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with duplicate elements\n",
+    "rdd = sc.parallelize([1, 2, 3, 2, 1, 4, 5, 2, 1])\n",
+    "# print the original rdd\n",
+    "print(rdd.collect())\n",
+    "\n",
+    "# Get the distinct elements from the RDD using distinct()\n",
+    "distinct_rdd = rdd.distinct()\n",
+    "\n",
+    "# Collect and print the distinct elements\n",
+    "print(\"Distinct elements in the RDD:\")\n",
+    "print(distinct_rdd.collect())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# filter()\n",
+    "- it is used to create new RDD containing the elements that satisfy the condition . you can relate it to `where` clause fo SQL.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "Filtered elements in the RDD (even numbers):\n",
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with some elements\n",
+    "rdd = sc.parallelize([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "# print original rdd\n",
+    "print(rdd.collect())\n",
+    "# Filter the RDD to keep only even numbers\n",
+    "filtered_rdd = rdd.filter(lambda x: x % 2 == 0)\n",
+    "\n",
+    "# Collect and print the filtered elements\n",
+    "print(\"Filtered elements in the RDD (even numbers):\")\n",
+    "print(filtered_rdd.collect())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# first()\n",
+    " - returns the first element in the RDD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 45, 12, 9, 34]\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create an rdd with some elements\n",
+    "rdd = sc.parallelize([11,45,12,9,34])\n",
+    "# print the complete rdd\n",
+    "print(rdd.collect())\n",
+    "# print the first element of the rdd\n",
+    "print(rdd.first())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# map()\n",
+    " - it is used to transform each element in an rdd using a specified function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "Squared elements in the RDD:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n",
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with some elements\n",
+    "rdd = sc.parallelize([1, 2, 3, 4, 5])\n",
+    "# print the original rdd\n",
+    "print(rdd.collect())\n",
+    "\n",
+    "# Map each element to its square using map()\n",
+    "squared_rdd = rdd.map(lambda x: x * x)\n",
+    "# Collect and print the transformed elements\n",
+    "print(\"Squared elements in the RDD:\")\n",
+    "print(squared_rdd.collect())\n",
+    "\n",
+    "# this can be done using function too instead of lambda\n",
+    "def sq_ele(x):\n",
+    "    return x*x\n",
+    "squared_rdd_by_func = rdd.map(sq_ele)\n",
+    "print(squared_rdd_by_func.collect())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# flatmap\n",
+    "- it maps each element in rdd using a specified function. the result is a flattened rdd containing all the transformed elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapped elements (list of words) using map():\n",
+      "[['Hello', 'world'], ['Good', 'morning'], ['How', 'are', 'you']]\n",
+      "\n",
+      "Flattened elements (individual words) using flatMap():\n",
+      "['Hello', 'world', 'Good', 'morning', 'How', 'are', 'you']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with some words in sentences\n",
+    "rdd = sc.parallelize([\"Hello world\", \"Good morning\", \"How are you\"])\n",
+    "\n",
+    "# Apply map() to split each sentence into words\n",
+    "mapped_rdd = rdd.map(lambda line: line.split())\n",
+    "\n",
+    "# Apply flatMap() to split each sentence into words and flatten the result\n",
+    "flat_mapped_rdd = rdd.flatMap(lambda line: line.split())\n",
+    "\n",
+    "# Collect and print the results\n",
+    "print(\"Mapped elements (list of words) using map():\")\n",
+    "print(mapped_rdd.collect())\n",
+    "\n",
+    "print(\"\\nFlattened elements (individual words) using flatMap():\")\n",
+    "print(flat_mapped_rdd.collect())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# foreach()\n",
+    "- applies a function to each element of the RDD\n",
+    "- unlike `map()` and `flatmap()` (bot of these are transformations), `foreach()` is an action."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Element: 5\n",
+      "Element: 2\n",
+      "Element: 4\n",
+      "Element: 1\n",
+      "Element: 3==============================================>         (10 + 2) / 12]\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with some elements\n",
+    "rdd = sc.parallelize([1, 2, 3, 4, 5])\n",
+    "\n",
+    "# Define a function to print each element\n",
+    "def print_element(element):\n",
+    "    print(\"Element:\", element)\n",
+    "\n",
+    "# Apply foreach() to print each element\n",
+    "rdd.foreach(print_element)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# groupBy()\n",
+    "- returns an RDD of grouped items\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grouped elements in the RDD by length:\n",
+      "Length: 3, Grouped Elements: ['Tom']\n",
+      "Length: 4, Grouped Elements: ['John', 'John']\n",
+      "Length: 5, Grouped Elements: ['Jimmy', 'Jacky', 'Jimmy', 'Jimmy']\n",
+      "Length: 6, Grouped Elements: ['Lenevo']\n",
+      "Length: 7, Grouped Elements: ['Anvisha']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# create an RDD\n",
+    "rdd = sc.parallelize([\"Tom\", \"Lenevo\", \"Anvisha\",\n",
+    "    \"John\", \"Jimmy\", \"Jacky\",\n",
+    "    \"John\", \"Jimmy\", \"Jimmy\"])\n",
+    "# Using groupBy transformation to group elements based on their length\n",
+    "group_rdd = rdd.groupBy( lambda x: len(x))\n",
+    "# Iterate through the grouped RDD and print the key and grouped elements\n",
+    "print(\"Grouped elements in the RDD by length:\")\n",
+    "for key, group in group_rdd.collect():\n",
+    "    print(f\"Length: {key}, Grouped Elements: {list(group)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# groupByKey()\n",
+    "- used to group elements of an RDD by a key. It is similar to the groupBy() method, but specifically designed for RDDs containing key-value pairs. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('A', 1), ('A', 3), ('B', 4), ('B', 2), ('C', 5)]\n",
+      "B [4, 2]\n",
+      "C [5]\n",
+      "A [1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create an key-value rdd\n",
+    "rdd = sc.parallelize([(\"A\",1),(\"A\",3),(\"B\",4),(\"B\",2),(\"C\",5)])\n",
+    "print(rdd.collect())\n",
+    "# lets group it by key\n",
+    "grouped_by_key = rdd.groupByKey()\n",
+    "# iterate through rdd and print the key and grouped elements\n",
+    "for key,group in grouped_by_key.collect():\n",
+    "    print(key,list(group))\n",
+    "# print(rdd.groupByKey().collect())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# persist()\n",
+    "- Set this RDD’s storage level to persist its values across operations after the first time it is computed. This can only be used to assign a new storage level if the RDD does not have a storage level set yet. If no storage level is specified defaults to (MEMORY_ONLY)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "Memory Serialized 1x Replicated\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a new rdd\n",
+    "rdd = sc.parallelize([\"a\",\"b\",\"c\"])\n",
+    "# persist it\n",
+    "rdd.persist()\n",
+    "# check if it is cached\n",
+    "print(rdd.is_cached)\n",
+    "# print the storage level of the rdd\n",
+    "print(rdd.getStorageLevel())\n",
+    "\n",
+    "# lets unpersis it\n",
+    "rdd.unpersist()\n",
+    "print(rdd.is_cached)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# cache()\n",
+    "- cache is shorthand for rdd.persist(StorageLevel.MEMORY_ONLY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# reduceByKey()\n",
+    "-  merge the values for each key using  an associative and cumulative redue fucntion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reduced RDD:\n",
+      "[(1, 40), (2, 70), (3, 40)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with key-value pairs\n",
+    "rdd = sc.parallelize([(1, 10), (2, 20), (1, 30), (3, 40), (2, 50)])\n",
+    "\n",
+    "# Reduce values by key using reduceByKey()\n",
+    "reduced_rdd = rdd.reduceByKey(lambda x, y: x + y)\n",
+    "\n",
+    "# Collect and print the reduced RDD\n",
+    "print(\"Reduced RDD:\")\n",
+    "print(reduced_rdd.collect())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# textFile()\n",
+    "- reads a textfile to create an RDD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenati']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lets read a texfile to create an RDD\n",
+    "rdd = sc.textFile('sample_rdd_text.txt')\n",
+    "# print the content of rdd\n",
+    "print(rdd.collect())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# saveAsTextFile()\n",
+    "- saves the rdd to texfile\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an RDD with some data\n",
+    "data = [\"Hello\", \"World\", \"Spark\", \"is\", \"awesome\"]\n",
+    "rdd = sc.parallelize(data)\n",
+    "\n",
+    "# lets save the rdd to a textfile\n",
+    "rdd.coalesce(1).saveAsTextFile(\"rdd_as_textfile\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# sortBy()\n",
+    "- sorts the RDD by given keyFunc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'apple'), (3, 'orange'), (2, 'banana'), (4, 'grape')]\n",
+      "Sorted RDD (Ascending):\n",
+      "[(1, 'apple'), (2, 'banana'), (3, 'orange'), (4, 'grape')]\n",
+      "\n",
+      "Sorted RDD (Descending):\n",
+      "[(3, 'orange'), (4, 'grape'), (2, 'banana'), (1, 'apple')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with some data\n",
+    "data = [(1, 'apple'), (3, 'orange'), (2, 'banana'), (4, 'grape')]\n",
+    "rdd = sc.parallelize(data)\n",
+    "\n",
+    "print(rdd.collect())\n",
+    "# Sort the RDD by the first element of each tuple (ascending order)\n",
+    "sorted_rdd_asc = rdd.sortBy(lambda x: x[0])\n",
+    "\n",
+    "# Sort the RDD by the second element of each tuple (descending order)\n",
+    "sorted_rdd_desc = rdd.sortBy(lambda x: x[1], ascending=False)\n",
+    "\n",
+    "# Collect and print the sorted RDDs\n",
+    "print(\"Sorted RDD (Ascending):\")\n",
+    "print(sorted_rdd_asc.collect())\n",
+    "\n",
+    "print(\"\\nSorted RDD (Descending):\")\n",
+    "print(sorted_rdd_desc.collect())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# sortByKey()\n",
+    "- used to sort an RDD containing key-value pairs by their keys. This method is specifically designed for RDDs where each element is a tuple or pair, with the first element of the tuple being the key and the second element being the value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original_rdd [(3, 'orange'), (1, 'apple'), (2, 'banana'), (4, 'grape')]\n",
+      "Sorted  ascending RDD by key:\n",
+      "[(1, 'apple'), (2, 'banana'), (3, 'orange'), (4, 'grape')]\n",
+      "Sorted  ascending RDD by key:\n",
+      "[(4, 'grape'), (3, 'orange'), (2, 'banana'), (1, 'apple')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an RDD with key-value pairs\n",
+    "data = [(3, 'orange'), (1, 'apple'), (2, 'banana'), (4, 'grape')]\n",
+    "rdd = sc.parallelize(data)\n",
+    "print(\"original_rdd\",rdd.collect())\n",
+    "\n",
+    "# Sort the RDD by keys using sortByKey()\n",
+    "sorted_rdd = rdd.sortByKey(ascending=True)\n",
+    "\n",
+    "# Collect and print the sorted RDD\n",
+    "print(\"Sorted  ascending RDD by key:\")\n",
+    "print(sorted_rdd.collect())\n",
+    "#  Sort the RDD by keys using sortByKey()\n",
+    "sorted_rdd = rdd.sortByKey(ascending=False)\n",
+    "print(\"Sorted  ascending RDD by key:\")\n",
+    "print(sorted_rdd.collect())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
