added wordcount program

--- a/rdd.ipynb
+++ b/rdd.ipynb
@@ -981,6 +981,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# WordCount program\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lorem: 1\n",
+      "dolor: 1\n",
+      "consectetuer: 1\n",
+      "adipiscing: 1\n",
+      "Aenean: 2\n",
+      "commodo: 1\n",
+      "ligula: 1\n",
+      "massa.: 1\n",
+      "penatibus: 1\n",
+      "et: 1\n",
+      "dis: 1\n",
+      "nascetur: 1\n",
+      "Donec: 2\n",
+      "felis,: 1\n",
+      "nec,: 2\n",
+      "pellentesque: 1\n",
+      "eu,: 1\n",
+      "pretium: 1\n",
+      "quis,: 1\n",
+      "sem.: 1\n",
+      "Nulla: 1\n",
+      "consequat: 1\n",
+      "massa: 1\n",
+      "quis: 1\n",
+      "pede: 1\n",
+      "fringilla: 1\n",
+      "eget,: 1\n",
+      "arcu.: 1\n",
+      "enim: 1\n",
+      "rhoncus: 1\n",
+      "ut,: 1\n",
+      "a,: 1\n",
+      "venenati: 1\n",
+      "ipsum: 1\n",
+      "sit: 1\n",
+      "amet,: 1\n",
+      "elit.: 1\n",
+      "eget: 1\n",
+      "dolor.: 1\n",
+      "Cum: 1\n",
+      "sociis: 1\n",
+      "natoque: 1\n",
+      "magnis: 1\n",
+      "parturient: 1\n",
+      "montes,: 1\n",
+      "ridiculus: 1\n",
+      "mus.: 1\n",
+      "quam: 1\n",
+      "ultricies: 1\n",
+      "enim.: 1\n",
+      "justo,: 2\n",
+      "vel,: 1\n",
+      "aliquet: 1\n",
+      "vulputate: 1\n",
+      "In: 1\n",
+      "imperdiet: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark import SparkConf, SparkContext\n",
+    "\n",
+    "# Create a Spark configuration\n",
+    "conf = SparkConf().setAppName(\"WordCountRDD\").setMaster(\"local[*]\")\n",
+    "\n",
+    "# Create a Spark context\n",
+    "sc = SparkContext(conf=conf)\n",
+    "\n",
+    "# Read the text file into an RDD\n",
+    "text_rdd = sc.textFile(\"sample_rdd_text.txt\")\n",
+    "\n",
+    "# Split each line into words and flatten the RDD\n",
+    "words_rdd = text_rdd.flatMap(lambda line: line.split())\n",
+    "\n",
+    "# Map each word to a tuple (word, 1) for counting\n",
+    "word_count_rdd = words_rdd.map(lambda word: (word, 1))\n",
+    "\n",
+    "# Reduce by key to count the occurrences of each word\n",
+    "word_counts = word_count_rdd.reduceByKey(lambda x, y: x + y)\n",
+    "\n",
+    "# Collect the word counts and print them\n",
+    "for word, count in word_counts.collect():\n",
+    "    print(f\"{word}: {count}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
